--- a/app/customers/customers-page.css
+++ b/app/customers/customers-page.css
@@ -6,4 +6,19 @@
   .table-payments, .table-meetings {
     margin-left: 3%;
     width: 45%;
-  }
+}
+
+
+.profile-container {
+  display: flex;
+  align-items: flex-start;
+  margin: 20px;
+}
+
+.profile-info {
+  flex: 0.8;
+}
+
+.profile-image {
+  margin-left: 20px;
+}
