feat(responsive): navbar showing only on desktop and hidden on mobile (clicking on the logo shows it)

--- a/app/globals.css
+++ b/app/globals.css
@@ -16,8 +16,12 @@
   }
 }
 
+html {
+  @apply theme-gradient bg-no-repeat h-full;
+}
+
 body {
-  @apply theme-gradient;
+  @apply bg-transparent;
 }
 
 h1 {
