style(layout): using layout.tsx to display page style instead of creating background on every page

--- a/app/globals.css
+++ b/app/globals.css
@@ -6,6 +6,7 @@
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
   --background-end-rgb: 255, 255, 255;
+  @apply h-auto bg-grey
 }
 
 @media (prefers-color-scheme: dark) {
@@ -13,19 +14,20 @@
     --foreground-rgb: 255, 255, 255;
     --background-start-rgb: 0, 0, 0;
     --background-end-rgb: 0, 0, 0;
+    @apply h-auto bg-grey
   }
 }
 
-html {
-  @apply bg-grey h-full;
-}
-
 body {
-  @apply bg-grey flex justify-evenly h-full;
+  @apply flex justify-evenly h-full;
 }
 
 h1 {
   @apply text-2xl font-bold;
+}
+
+h2 {
+  @apply text-xl font-bold;
 }
 
 @layer utilities {
