mod: multiple document have been formatted to clean the code in the /app/pages

--- a/app/(pages)/employee/customers/customers-page.css
+++ b/app/(pages)/employee/customers/customers-page.css
@@ -1,13 +1,13 @@
 .tables-container {
-    display: flex;
-    margin-top: 5%;
-  }
-  
-  .table-payments, .table-meetings {
-    margin-left: 3%;
-    width: 45%;
+  display: flex;
+  margin-top: 5%;
 }
 
+.table-payments,
+.table-meetings {
+  margin-left: 3%;
+  width: 45%;
+}
 
 .profile-container {
   display: flex;
