--- a/app/(pages)/employee/coaches-list/coaches-list.css
+++ b/app/(pages)/employee/coaches-list/coaches-list.css
@@ -1,113 +1,117 @@
 .profile-icon {
-    width: 40px;
-    height: 40px;
-    border-radius: 50%;
-    object-fit: cover;
-  }
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  object-fit: cover;
+}
 
-  .default-profile-icon {
-    width: 40px;
-    height: 40px;
-    border-radius: 50%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color: #f0f0f0;
-  }
+.default-profile-icon {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #f0f0f0;
+}
 
-  .default-icon {
-    font-size: 24px;
-    color: #ccc;
-  }
+.default-icon {
+  font-size: 24px;
+  color: #ccc;
+}
 
-  .coach-profile-container {
-    display: flex;
-    align-items: center;
-  }
-  
-  .profile-icon-container {
-    margin-right: 8px;
-  }
-  
-  .coach-name {
-    font-size: 16px;
-  }
+.coach-profile-container {
+  display: flex;
+  align-items: center;
+}
 
-  .ant-table-thead .ant-table-cell {
-    background-color: white !important;
-  }
-  
-  .custom-table-header .ant-table-cell {
-    color: gray;
-    font-weight: bold;
-  }
-  
-  .custom-table-header .ant-table-thead > tr > th {
-    color: gray;
-    font-weight: bold;
-  }
-  
-  .actions-container {
-    text-align: right;
-  }
-  
-  .actions-icon {
-    font-size: 20px;
-    display: inline-block;
-  }
+.profile-icon-container {
+  margin-right: 8px;
+}
 
-  .header-container {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-bottom: 16px;
-  }
-  
-  .left-header {
-    display: flex;
-    align-items: center;
-    gap: 16px;
-  }
+.coach-name {
+  font-size: 16px;
+}
 
-  .bulk-action-select {
-    margin-right: 8px;
-  }
+.ant-table-thead .ant-table-cell {
+  background-color: white !important;
+}
 
-  .apply-button {
-    background-color: gray;
-    color: white;
-    border: none;
-  }
-  
-  .right-header {
-    display: flex;
-    align-items: center;
-    gap: 16px;
-  }
+.custom-table-header .ant-table-cell {
+  color: #607d8b;
+  font-weight: bold;
+}
 
-  .search-container {
-    display: flex;
-    align-items: center;
-    gap: 8px;
-  }
-  
-  .search-icon {
-    font-size: 16px;
-    cursor: pointer;
-  }
-  
-  .search-input {
-    width: 200px;
-    display: none;
-  }
-  
-  .search-container .search-input {
-    display: inline-block;
-  }
+.custom-table-header .ant-table-thead > tr > th {
+  color: #607d8b;
+  font-weight: bold;
+}
 
-  .bordered-header-container {
-    border: 1px solid #dcdcdc; /* Couleur de la bordure */
-    border-radius: 4px; /* Coins arrondis (optionnel) */
-    padding: 16px; /* Espace intérieur (optionnel) */
-    margin-bottom: 16px; /* Espace en bas pour séparer de la table */
-  }
+.actions-container {
+  text-align: right;
+}
+
+.actions-icon {
+  font-size: 20px;
+  display: inline-block;
+}
+
+.header-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 16px;
+}
+
+.left-header {
+  display: flex;
+  align-items: center;
+  gap: 16px;
+}
+
+.bulk-action-select {
+  margin-right: 8px;
+}
+
+.apply-button {
+  background-color: gray;
+  color: white;
+  border: none;
+}
+
+.right-header {
+  display: flex;
+  align-items: center;
+  gap: 16px;
+}
+
+.search-container {
+  display: flex;
+  align-items: center;
+  gap: 8px;
+}
+
+.search-icon {
+  font-size: 16px;
+  cursor: pointer;
+}
+
+.search-input {
+  width: 200px;
+  display: none;
+}
+
+.search-container .search-input {
+  display: inline-block;
+}
+
+.bordered-header-container {
+  border: 1px solid #dcdcdc;
+  border-radius: 4px;
+  padding: 16px;
+  margin-bottom: 16px;
+}
+
+.text-gray-blue {
+  color: #607d8b;
+}
